[package]
name = "MinecraftBEserverbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "net", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = "0.4"
byteorder = "1.5"
rand = "0.8"
